[package]
name = "pon"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
echo = { version = "0.1.0", path = "../echo" }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
