[package]
name = "rwrk"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "macros", "time", "signal"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
prometheus = "0.13"
axum = "0.8.8"
eventsource-stream = "0.2"
